# openaws-vpn-client

./: .gitignore  Cargo.toml  build-android.sh  build.rs  cbindgen.toml  flake.nix  openvpn.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 04bvajy2blfys5fvvrjgqidlfbzv362z-source  0kfcmb1mpaqakfjyd5ydwbpb41qc0gfr-source  4wdxq0vdc8qpw5ipsqmv0j204brqj4zg-source  rljhbqllgqdyc4f22iwyf857fjg5wfnx-source
build-mobile/openvpn-2.5.11/src/openvpn/: buffer.h  common.h  error.h  manage.c  manage.h  misc.h  options.h  ssl.c
scripts/: build-mobile-openvpn.sh  build-openssl-android.sh  check-android-env.sh  patch-openvpn.sh
src/: app.rs  cmd.rs  config.rs  consts.rs  dns.rs  ffi.h  ffi.rs  lib.rs  log.rs  main.rs  manager.rs  saml_server.rs  state_manager.rs  task.rs
