[package]
name = "openaws-vpn-client"
version = "0.1.8"
edition = "2021"
authors = ["KoresFramework", "Jonathan H. R. Lopes <jhrldev@gmail.com>"]
license = "MIT"

description = "Unofficial open-source AWS VPN client written in Rust"
homepage = "https://github.com/JonathanxD/openaws-vpn-client"
repository = "https://github.com/JonathanxD/openaws-vpn-client"
readme = "README.md"
keywords = ["vpn", "openaws", "vpn-client"]
categories = ["gui"]
documentation = "https://docs.rs/openaws-vpn-client/"

# Configure both CLI binary and library outputs
[[bin]]
name = "openaws-vpn-client"
path = "src/main.rs"

[lib]
name = "openaws_vpn_client"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
lazy_static = "=1.4.0"
tokio = { version = "=1.14.0", features = ["full"] }
warp = "=0.3"
dirs = "=4.0.0"
domain = { version = "=0.6.1", features = ["tokio", "resolv"] }
rand = "=0.8.4"
hex = "=0.4.3"
open = "=2.0.2"
tokio-stream = "=0.1.8"
temp-dir = "=0.1.11"
ctrlc = "=3.2.1"
clap = "2.33"

# Android-specific dependencies
[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2"

[dev-dependencies]
cbindgen = "0.24.0"

[build-dependencies]
cbindgen = "0.24.0"

[profile.release]
strip = "symbols"
lto = true
opt-level = 3
